--- a/Classwork/flexPractice.html
+++ b/Classwork/flexPractice.html
@@ -7,37 +7,68 @@
     <title>Flex Practice</title>
     <style>
         /*Feel Free to add classes and styling as you see fit.*/
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
         .content{
             border: 1px solid black;
             background-color: #FFa500;
             color: white;
         }
         .container{
-            
+            display: flex;
+            flex-wrap: wrap;
         }
         .center{
             text-align: center;
         }
+        .quarter{
+            width: 25%;
+        }
+        .half{
+            width: 50%;
+        }
+        .twohund{
+            width: 200px;
+        }
+        .threehund{
+            width: 300px;
+        }
+        .flex-grow{
+            flex-grow: 1;
+        }
+        .no-grow{
+            flex-grow: 0;
+        }
+        .flex-shrink{
+            flex-shrink: 1;
+        }
+        .no-shrink{
+            flex-shrink: 0;
+        }
+        .pos1{
+            order: -1;
+        }
+        
  </style>
 </head>
 <body>
     <h3 class="center"> The container below should be a flex box with rows that wrap with space around for justifying content. Follow the instructions for each div below regarding styling guidelines</h3>
     <div class="container">
-        <div class="content center">This div should have a basis width of: 25%, should be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 300px, should NOT be able to grow, and should be NOT able to shrink</div>
-        <div class="content center">This div should have a basis width of: 300px, should be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 300px, should be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 25%, should be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 50%, should be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 200px, should NOT be able to grow, and should NOT be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 200px, should be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 300px, should NOT be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 50%, should be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 200px, should NOT be able to grow, and should be able to shrink</div>
-        <div class="content center">This div should have a basis width of: 200px, should be able to grow, and should be NOT able to shrink</div>
-        <div class="content center">This div should have a basis width of: 25%, should be able to grow, should be able to shrink And should be the first Item</div>
-
-
+        <div class="content center quarter flex-grow flex-shrink">This div should have a basis width of: 25%, should be able to grow, and should be able to shrink</div>
+        <div class="content center threehund no-grow no-shrink">This div should have a basis width of: 300px, should NOT be able to grow, and should be NOT able to shrink</div>
+        <div class="content center threehund flex-grow flex-shrink">This div should have a basis width of: 300px, should be able to grow, and should be able to shrink</div>
+        <div class="content center threehund flex-grow flex-shrink">This div should have a basis width of: 300px, should be able to grow, and should be able to shrink</div>
+        <div class="content center quarter flex-grow flex-shrink">This div should have a basis width of: 25%, should be able to grow, and should be able to shrink</div>
+        <div class="content center half flex-grow flex-shrink">This div should have a basis width of: 50%, should be able to grow, and should be able to shrink</div>
+        <div class="content center twohund no-grow no-shrink">This div should have a basis width of: 200px, should NOT be able to grow, and should NOT be able to shrink</div>
+        <div class="content center twohund flex-grow flex-shrink">This div should have a basis width of: 200px, should be able to grow, and should be able to shrink</div>
+        <div class="content center threehund no-grow flex-shrink">This div should have a basis width of: 300px, should NOT be able to grow, and should be able to shrink</div>
+        <div class="content center half flex-grow flex-shrink">This div should have a basis width of: 50%, should be able to grow, and should be able to shrink</div>
+        <div class="content center twohund no-grow flex-shrink">This div should have a basis width of: 200px, should NOT be able to grow, and should be able to shrink</div>
+        <div class="content center twohund flex-grow no-shrink">This div should have a basis width of: 200px, should be able to grow, and should be NOT able to shrink</div>
+        <div class="content center quarter flex-shrink flex-grow pos1">This div should have a basis width of: 25%, should be able to grow, should be able to shrink And should be the first Item</div>
     </div>
 </body>
 </html>
